security-gp.tf
#Creating Security-Groups
resource "aws_security_group" "machi-sgp" {
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.machi-vpc.id}"

  ingress {
    description      = "TLS from VPC"
    from_port        = 0
    to_port          = 65535
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "machi-sgp"
  }
}
